feat(parser): improve content parsing with CommonMark
- Add CommonMark library for robust markdown parsing
- Update ContentParser to use CommonMark for code block extraction
- Add support for multiple file formats with consistent parsing patterns
- Improve file content cleaning and extraction
- Update requirements.txt with CommonMark dependency

The changes improve code extraction reliability and standardize the parsing process across different file types using CommonMark instead of regex-only approach.

--- a/Vincius/Config/Workflows/Examples/workflow.yaml
+++ b/Vincius/Config/Workflows/Examples/workflow.yaml
@@ -32,7 +32,7 @@ workflow:
       input_key: analysis_result
       output_key: tasks_result
       agent_config:
-        model: "gemini-pro"
+        model: "gemini-2.0-flash"
         max_tokens: 1024
         temperature: 0.7
         prompt: "Analyze the technical requirements and create a structured task breakdown following the provided guidelines"
