--- a/Vincius/Config/Workflows/workflow.yaml
+++ b/Vincius/Config/Workflows/workflow.yaml
@@ -1,4 +1,28 @@
 workflow:
+  Analysis:
+    description: "Analyze and document the requirements for the software."
+    responsible_department: ANALYSIS
+    action:
+      type: class_execution
+      class: AnalystAgent
+      module: Vincius.Agents.Analyst.agent
+      input_key: null
+      output_key: analysis_result
+      agent_config:
+        prompt: "Escreva os requerimentos para criar um site em html com 3 paginas, home, experiencies e sobre. Escolha o conteudo o as paginas deve ter um design moderno usando o tailwind"
+        model: "gemini-2.0-flash"
+        max_tokens: 1024
+        temperature: 0.7
+        debug_mode: true
+        guidelines:
+          - "Focus on system architecture and components"
+          - "Consider scalability and maintainability"
+          - "Identify potential technical challenges"
+          - "Document all technical requirements clearly"
+          - "Provide clear implementation recommendations"
+    next_steps:
+      success_step: Development
+
   Development:
     description: Develop the software based on the analyzed requirements.
     responsible_department: DEVELOPMENT
@@ -12,36 +36,13 @@ workflow:
         model: "gemini-2.0-flash"
         max_tokens: 2048
         temperature: 0.9
-        prompt: "Criar uma página inicial (home) para o GitScrum usando Tailwind CSS pode ser uma tarefa interessante. O GitScrum é uma ferramenta de gerenciamento ágil que combina os conceitos do GitHub e Scrum, então a página home deve refletir isso com um design moderno, limpo e profissional."
+        prompt: "Based on the technical analysis, implement the the html pages usign modern design with tailwind."
         guidelines:
           - "Develop using a clean html"
           - "HTML and CSS"
           - "Tailwind"
           - "Modern Design"
-          - "Responsive Design"
-          - "nome da pagina deve ser index.html"
-    next_steps:
-      success_step: Development2
-  Development2:
-    description: Develop the software based on the analyzed requirements.
-    responsible_department: DEVELOPMENT
-    action:
-      type: class_execution
-      class: DeveloperAgent
-      module: Vincius.Agents.Developer.agent
-      input_key: null
-      output_key: development_output
-      agent_config:
-        model: "gemini-2.0-flash"
-        max_tokens: 2048
-        temperature: 0.9
-        prompt: "Criar uma página de precos (pricing) para o GitScrum usando Tailwind CSS pode ser uma tarefa interessante. O GitScrum é uma ferramenta de gerenciamento ágil que combina os conceitos do GitHub e Scrum, então a página de precificacao para refletir isso com um design moderno, limpo e profissional."
-        guidelines:
-          - "Pagina de preco"
-          - "HTML and CSS"
-          - "Tailwind"
-          - "Modern Design"
-          - "Responsive Design"
-          - "nome a pagina deve ser pricing.html"
+          - "Implement error handling"
+          - "Write clean, maintainable code"
     next_steps:
       success_step: {}
