fix(agent-initialization): correct agent setup and file handling
Resolves issues with agent initialization and improves file handling system:

Fix missing analyzer attribute in AnalystAgent
Fix syntax error in CodeCreator
Remove hardcoded file paths in file_system_manager
Implement base_dir_key per agent via workflow.yaml
Enhance ContentParser to recognize various file formats
Add fallback strategies for truncated content parsing
Implement robust logging for parsing errors
Fix incorrect code_dir references in CodeReviewer
Add dynamic strategy for determining workflow start steps

--- a/Vincius/Config/Workflows/workflow.yaml
+++ b/Vincius/Config/Workflows/workflow.yaml
@@ -9,6 +9,7 @@ workflow:
       input_key: null
       output_key: analysis_result
       agent_config:
+        base_dir_key: "Docs"
         prompt: "Escreva os requerimentos para criar um site em html com 3 paginas, home, experiencies e sobre. Escolha o conteudo o as paginas deve ter um design moderno usando o tailwind"
         model: "gemini-2.0-flash"
         max_tokens: 1024
@@ -24,7 +25,7 @@ workflow:
       success_step: Development
 
   Development:
-    description: Develop the software based on the analyzed requirements.
+    description: "Develop the software based on the analyzed requirements."
     responsible_department: DEVELOPMENT
     action:
       type: class_execution
@@ -33,6 +34,7 @@ workflow:
       input_key: analysis_result
       output_key: development_output
       agent_config:
+        base_dir_key: "Codebase"
         model: "gemini-2.0-flash"
         max_tokens: 2048
         temperature: 0.9
