feat(api_response): Improve README.md for APIRequest Agent and add sample API response JSON
- Corrected typos and improved clarity in the README.md for the APIRequest agent.
- Enhanced formatting and structure for better readability.
- Added a new JSON file (get_request_info.json) with sample API response data.

--- a/Vincius/Config/Workflows/workflow.yaml
+++ b/Vincius/Config/Workflows/workflow.yaml
@@ -6,7 +6,7 @@ workflow:
       type: class_execution
       class: APIRequestAgent
       module: Vincius.Agents.APIRequest.agent
-      input_key: prompt_output
+      input_key: null
       output_key: api_request_result
       agent_config:
         base_dir_key: "API"
